# CryptoAnalyzer

./: .env.example  .gitignore  README.md  install-poetry.py  pyproject.toml
docs/: README.md  architecture.md  full_documentation.md  roadmap.md  synthetic_data.md  workflow.md
scripts/: benchmark_heuristics.py  generate_test_images_windows.py  generate_test_images_wsl.ps1
src/crypto_analyzer/: __init__.py  cli.py  gui.py
src/crypto_analyzer/ai/: __init__.py  config.py  context.py  insights.py  openai_client.py
src/crypto_analyzer/benchmarks/: __init__.py  cli.py  filesystem.py  heuristics.py  runner.py  signatures.py  synthetic.py
src/crypto_analyzer/core/: __init__.py  models.py  (+3 more)
test_assets/: README.md
test_assets/wsl/: generate_images.sh
tests/: conftest.py  synthetic_data.py  test_ai_config.py  test_ai_context.py  test_ai_insights.py  test_ai_openai_client.py  test_analysis_manager.py  test_analysis_manager_extra.py  test_analysis_service.py  test_benchmarks_report.py  test_bitlocker_detector.py  test_cli.py  test_crash_reporting_install.py  test_encryption_heuristics.py  test_encryption_signatures.py  test_error_reporting.py  test_fs_detection.py  test_fs_detection_extra.py  test_gui.py  test_integration.py  test_integration_generated_images.py  test_localization.py  test_metadata_scanner.py  test_placeholder.py  test_report_exporter.py  test_session.py  test_shared_logging.py  test_signature_based_detector.py  test_signature_loader.py  test_synthetic_data.py  test_tasks.py  test_tsk_driver.py  test_tsk_driver_unit.py  test_unlocking_drivers.py
(+33 files in other folders)
